syntax = "proto3";
package account.v0;
option go_package = "kwil/api/protobuf/account/v0/gen/go";

import "google/api/annotations.proto";
import "common/v0/account.proto";

service AccountService {
    rpc GetAccount(GetAccountRequest) returns (GetAccountResponse) {
        option (google.api.http) = {
            get: "/api/v0/{address}/account"
        };
    }
}

message GetAccountRequest {
    string address = 1;
}

message GetAccountResponse {
    common.v0.Account account = 1;
}